# bachelor

./: .gitignore  makeheaders
alg/: p1.py  p2.py  p3.py  p4.py
asc/: lab8-20.asm  lab8-ex.asm  lab8-fio.asm  lab8-readfile.asm  string_practice.asm
asc/asc10/: asc10-1.asm
asc/asc11/: main.asm
asc/asc2/: 5.asm  7.asm
asc/asc3/: imul.asm
asc/asc6/: strings.asm  strings2.asm
asc/asc7/: asc7_0.asm
asc/aschw2/: 1.asm  2.asm  2ok.asm  9.asm
asc/aschw3/: 1.asm  2.asm
dsa/asg1/: Bag.cpp  Bag.h  BagIterator.cpp  ExtendedTest.cpp  ShortTest.cpp
dsa/asg3/: Makefile
dsa/asg5/: KPriorityQueue.cpp  KPriorityQueue.h
dsa/asg6/: ExtendedTest.cpp  HashTable.h  Map.cpp  Map.h  MapIterator.cpp  MapIterator.h  ShortTest.cpp  main.cpp
dsa/asg7/: ExtendedTest.cpp  SMMIterator.cpp  SMMIterator.h  ShortTest.cpp  SortedMultiMap.cpp  SortedMultiMap.h  main.cpp
dsa/lab1/: Bag.cpp  BagIterator.cpp  ExtendedTest.cpp
dsa/lab2/: BagTest.py  BagTestExtended.py
fp/: scrape_books.py
fp/fp1/: assign1_10.py  assign1_16.py  assign1_5.py
fp/fp10/: brain.py  exceptions.py  game_master.py  helper.py  main.py  table.py  ui.py  validator.py
fp/fp11/: p6iter.py  p6recurs.py
fp/fp2/: fp2.py
fp/fp3-4/: complex.py  helper.py  main.py  ui.py
fp/fp5-7/: .coverage  abstract_dao.py  client_dao.py  client_entity.py  helper.py  main.py  movie_dao.py  movie_entity.py  rental_entity.py  tests.py  ui.py
fp/fp8/: .coveragerc  main.py  settings.json  ui.py
fp/fp9/: filter.py  main.py  settings.json  sort.py
fp/test2/: controller.py  main.py  ui.py
ga/asg2/: BFS.cpp  Makefile  bonus.cpp
ga/asg3/: MinCostWalk.cpp  MinCostWalk.h  main.cpp
ga/asg4/: MinimumSpanningTree.cpp  bonus.cpp  bonus.h  main.cpp
ga/asg5/: HamiltonianCycle.cpp  HamiltonianCycle.h  main.cpp
lc/src/: exceptions.py  helper.py  main.spec  number.py  test.py  ui.py  validator.py
oop/asg11-12/: adminmoviemodel.cpp  adminmoviemodel.h  asg11-12.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  movie.cpp  movie.h  moviemodel.cpp  moviemodel.h  playlistmoviemodel.cpp  playlistmoviemodel.h  usermoviemodel.cpp  usermoviemodel.h
oop/asg14/: adminaddaction.cpp  adminaddaction.h  adminremoveaction.cpp  adminremoveaction.h  editaction.cpp  editaction.h  helpers.cpp  mainwindow.cpp  mainwindow.ui  moviemodel.h  playlistmoviemodel.h  usermoviemodel.h
oop/asg2/: 12a.h  12b.c  13b.c  main.c
oop/asg3-4/: Makefile  MedicationTest.c  MedicationVectorTest.c  main  main.c  output
oop/asg5-6/: Makefile  main.cpp
oop/asg8-9/: Makefile  Movie.h.gcov  UserController.cpp.gcov  admin_controller.gcda  admin_controller.gcno  alloc_traits.h.gcov  allocator.h.gcov  cpp_type_traits.h.gcov  exception.h.gcov  iostream.gcov  main.cpp  move.h.gcov  movie.gcda  movie.gcno  new.gcov  new_allocator.h.gcov  repo.gcda  repo.gcno  stl_algobase.h.gcov  stl_construct.h.gcov  stl_iterator.h.gcov  stl_uninitialized.h.gcov  stl_vector.h.gcov  ui.gcda  ui.gcno  user_controller.gcda  user_controller.gcno  user_test.gcda  user_test.gcno  user_ui.gcda  user_ui.gcno  vector.tcc.gcov
oop/asgn2/: 12a.c
oop/lab1/: 12a.cpp  12b.cpp
oop/lab8/: ComparatorDescendingInteger.cpp  Makefile
oop/test1/: Controller.h  (+5 more)
sem5/pdp/lab7/: CMakeLists.txt  Polynomial.cpp  Polynomial.h  karatsuba_polynomial_multiplication.h  main_karatsuba.cpp  main_sequential.cpp  naive_polynomial_multiplication.h  utils.h
sem5/pdp/lab8/: CMakeLists.txt  DSMChannel.h  DSMListener.h  DSMOp.h  DSMOpResult.h  DSMSupervisor.h  DSMValue.h  main.cpp
sem5/pdp/lab8/lab8/: CMakeLists.txt  lab8.cpp  lab8.h
sem5/pdp/project/: CMakeLists.txt  canny.h  helper.h  hough.h  hough_mpi.h  hough_threaded.h  main.cpp  main_parallel.cpp  thread_pool.h
thesis/: README.md  requirements.txt  thesis3.ipynb
(+1611 files in other folders)
